[package]
edition = "2018"
name = "fork-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.5"
serde = "1.0.130"
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.2.0"
