[package]
edition = "2018"
name = "fork_backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-session = "3.0.0"
axum = "0.2.5"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.2.0"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
