[package]
edition = "2018"
name = "fork_backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-redis-session = "0.2.2"
async-session = "3.0.0"
axum = "0.2.5"
config = "0.11.0"
diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
http-body = "0.4.3"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
rust-argon2 = "0.8.3"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.2.0"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
